--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -142,7 +142,7 @@ cplay_5 : "Only Channels are supported."
 cplay_6 : "You need to be the **Owner** of the channel[{0}] to connect it with this group.\n**Channel's Owner:** @{1}\n\nAlternatively you can link your group to that channel and then try connnecting with `/channelplay linked`"
 
 #Play
-play_1 : "🔄 Processing Query... Please Wait!"
+play_1 : "🔄 ᴘʀᴏᴄᴇssɪɴɢ ǫᴜᴇʀʏ 💞... ᴘʟᴇᴀsᴇ ᴡᴀɪᴛ ʙᴀʙʏ 💃"
 play_2 : "**🏷Channel Play Mode**\n\n🔄 Processing Query... Please Wait!\n**Linked Channel:** {0}"
 play_3 : "Failed to Process Query!"
 play_4 : "🖇 **Admins Only Play**\nOnly Admins and Auth Users can play music in this group.\n\nChange mode via /playmode and if you're already admin, reload admincache via /admincache"
@@ -229,18 +229,18 @@ queue_4 : "⏳ Added to Queue at **#{0}\n\n💡Title:** {1}\n**⏱Duration:** {2
 queue_5 : "Only one track inside queue, Please add some more to check list"
 
 # All Streaming Lines
-stream_1 : "📡 **Started Streaming** 💡\n\n👤**Requested By:** {0}\n🔦**Information: **[Here]({1})"
-stream_2 : "📡 **Started Streaming via URL ** 💡\n\n👤**Requested By:** {0}"
-stream_3 : "📡 **Started Streaming** 💡\n\n**🏷Title:** {0}\n⌛️**Duration**: {1}\n👤**Requested By:** {2}"
-stream_4 : "📡 **Started Streaming** 💡\n\n**🏷Title:** [{0}]({1})\n⌛️**Duration**: {2}\n👤**Requested By:** {3}"
+stream_1 : "🍷 **▐ sᴛᴀʀᴛᴇᴅ🧚‍♀sᴛʀᴇᴀᴍɪɴɢ ▌** 💡\n\n👤**Requested By:** {0}\n🔦**Information: **[Here]({1})"
+stream_2 : "🍷 **▐ sᴛᴀʀᴛᴇᴅ🧚‍♀sᴛʀᴇᴀᴍɪɴɢ ▌ via URL ** 💡\n\n👤**Requested By:** {0}"
+stream_3 : "🍷 **▐ sᴛᴀʀᴛᴇᴅ🧚‍♀sᴛʀᴇᴀᴍɪɴɢ ▌** 💡\n\n**🏷Title:** {0}\n⌛️**Duration**: {1}\n👤**Requested By:** {2}"
+stream_4 : "🍷 **▐ sᴛᴀʀᴛᴇᴅ🧚‍♀sᴛʀᴇᴀᴍɪɴɢ ▌** 💡\n\n**🏷Title:** [{0}]({1})\n⌛️**Duration**: {2}\n👤**Requested By:** {3}"
 
 # Inline Buttons
 
 #General Buttons
-CLOSE_BUTTON  : "❌ᴄ ʟ ᴏ s ᴇ ❌"
-CLOSEMENU_BUTTON  : "❌ᴄʟᴏsᴇ ᴍᴇɴᴜ❌"
+CLOSE_BUTTON  : "▐ ᴄ  ʟ  ᴏ  s  ᴇ  ▌"
+CLOSEMENU_BUTTON  : "▐ ᴄ ʟ ᴏ s ᴇ ✘ ᴍ ᴇ ɴ ᴜ▌"
 BACK_BUTTON : "⬅ ʙ ᴀ ᴄ ᴋ "
-UNBAN_BUTTON : "🗑 ᴜ ɴ ʙ ᴀ ɴ Assistant"
+UNBAN_BUTTON : "😒 ᴜ ɴ ʙ ᴀ ɴ Assistant"
 
 #Lyrics
 L_B_1 : "🚀 Checkout Lyrics Now"
@@ -282,19 +282,19 @@ PL_B_4 : "💞 ᴘʟᴀʏ ᴍᴏᴅᴇ"
 PL_B_5 : "🔄 Del Whole Playlist"
 PL_B_6 : "↗️ Delete Playlist"
 PL_B_7 : "❗️ Yes, I'm sure. Delete it"
-PL_B_8 : "🔢 Play Top 10"
-PL_B_9 : "🤖 Play Global Top 10 Tracks"
-PL_B_10 : "🏘 Play Group's Top 10 Tracks"
-PL_B_11 : "👤 Play Personal Top 10 Tracks"
+PL_B_8 : "🔢 ᴘʟᴀʏ  ᴛᴏᴘ 10"
+PL_B_9 : "🤖 ᴘʟᴀʏ  Global Top 10 Tracks"
+PL_B_10 : "🏘 ᴘʟᴀʏ  Group's Top 10 Tracks"
+PL_B_11 : "👤 ᴘʟᴀʏ  Personal Top 10 Tracks"
 
 #Settings
-ST_B_1 : "🔊 Aud Quality"
-ST_B_2 : "🎥 Vid Quality"
-ST_B_3 : "🎩 Auth Users"
+ST_B_1 : "🔊 ᴀᴜᴅɪᴏ Quality"
+ST_B_2 : "🎥 ᴠɪᴅᴇᴏQuality"
+ST_B_3 : "🎩 ᴀᴜᴛʜ Users"
 ST_B_4 : "📱 Dashboard"
-ST_B_5 : "▶️ Play Mode"
+ST_B_5 : "▶️ ᴘʟᴀʏ  Mode"
 ST_B_6 : "🏳️‍🌈 Language"
-ST_B_7 : "🔄 Clean Mode"
+ST_B_7 : "🔄 ᴄʟᴇᴀɴ Mode"
 ST_B_8 : "{0} Low Quality Audio"
 ST_B_9 : "{0} Medium Quality Audio"
 ST_B_10 : "{0} High Quality Audio"
@@ -317,7 +317,7 @@ ST_B_26 : "🗑 Command Clean"
 ST_B_27 : "🧑‍🚀 Suggestion Mode"
 
 #Song
-SG_B_1 : "↗️ Open Private Chat"
+SG_B_1 : "↗️ ᴏᴘᴇɴ ᴘʀɪᴠᴀᴛᴇ ᴄʜᴀᴛ"
 SG_B_2 : "🔊 ᴀ ᴜ ᴅ ɪ ᴏ"
 SG_B_3 : "🎥 ᴠ ɪ ᴅ ᴇ ᴏ"
 
